# dsp_node

./: CMakeLists.txt  LICENSE.md  README.md  notes.txt
src/: CMakeLists.txt  README.md
src/apps/: CMakeLists.txt  README.md  alsa_to_file.c  codec2_demod_alsa_to_file.c  codec2_demod_file_comp.c  codec2_demod_file_short.c  codec2_mod_file_comp.c  codec2_mod_file_short.c  codec2_mod_file_to_alsa.c  file_to_alsa.c  file_to_file.c  file_to_tcp_to_file.c  file_to_vosk_to_file.c  resample_codec2_demod_file.c  resample_codec2_mod_file.c  uhd_codec2_demod.c  uhd_codec2_mod.c  uhd_rx_to_file.c  uhd_tx_from_file.c
src/apps/ncurses/: CMakeLists.txt  README.md  codec2_demod_alsa_to_file.c  codec2_mod_file_to_alsa.c  file_to_file.c  uhd_codec2_demod.c  uhd_codec2_mod.c  uhd_rx_to_file.c  uhd_tx_from_file.c
src/dsp_node/: CMakeLists.txt  README.md  dsp_node.c  dsp_node.h  dsp_node.h.in  dsp_node_types.h
src/dsp_node/alsa/: CMakeLists.txt  README.md  alsa_func.c  alsa_func.h
src/dsp_node/codec2/: CMakeLists.txt  README.md  codec2_func.c  codec2_func.h
src/dsp_node/file/: CMakeLists.txt  README.md  file_func.c  file_func.h
src/dsp_node/ncurses_dsp_monitor/: CMakeLists.txt  README.md  ncurses_dsp_monitor.c  ncurses_dsp_monitor.h
src/dsp_node/soxr/: CMakeLists.txt  README.md  soxr_func.c  soxr_func.h
src/dsp_node/soxr/patch/: soxr_cmake.patch
src/dsp_node/tcp/: .tcp_func.c.kate-swp  CMakeLists.txt  tcp_func.c  tcp_func.h
src/dsp_node/tcp_server/: CMakeLists.txt  README.md  tcp_server_func.c  tcp_server_func.h
src/dsp_node/uhd/: CMakeLists.txt  README.md  uhd_func.c  uhd_func.h
src/dsp_node/vosk/: CMakeLists.txt  README.md  vosk_func.c  vosk_func.h
src/kill_throbber/: CMakeLists.txt  README.md  kill_throbber.c  kill_throbber.h
src/logger/: CMakeLists.txt  README.md  logger.c  logger.h
